set terminal png
set output "histo-corout-threads.png"
set datafile separator ','
set title 'Histogram'
set auto x
set auto y
set style data histogram
set style fill solid border -1
set boxwidth 2
set xtic rotate by 90
plot [] [0:] "histo-corout-threads.csv" using 2:xtic(1) ti col, "" using 3 ti col, "" using 4 ti col, "" using 5 ti col, "" using 6 ti col, "" using 7 ti col, "" using 8 ti col, "" using 9 ti col, "" using 10 ti col, "" using 11 ti col, "" using 12 ti col, "" using 13 ti col, "" using 14 ti col

